--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -3,9 +3,25 @@
 /* btn green: #CFF263 */
 /* grey background: #F7F7F7 */
 
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+textarea,
+li,
+ul,
+a {
+  margin: 0;
+  padding: 0;
+}
+
 
 .full-width{
-  height: 500px;
+  height: 100vh;
   background: #4B196E;
   padding: 0;
 }
@@ -18,6 +34,14 @@
   background: transparent;
 }
 
+/* Override defaults */
+/* class "row" */
+
+.row {
+  margin: 0;
+}
+
+/* ----------------- */
 .top {
   height: 30px;
   background: #4B196E;
@@ -81,7 +105,45 @@
 }
 
 .benefits {
-  align: center;
+  text-align: center;
+  color: #F7F7F7;
+  margin: 0;
+}
+
+/* Sliders styles start */
+
+.sliders-section {
+  padding-top: 30px;
+}
+/*
+input[type=range] {
+  margin: 30px 0;
+} */
+
+.slider-container {
+  margin: 30px 0;
+}
+
+.sliders {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+.slider.slider-horizontal {
+  width: 100%;
+  box-sizing: border-box;
+  /* padding: 20px 0; */
+}
+
+/* Sliders styles end */
+
+
+
+#calculated-amount {
+  font-size: 30px;
+  color: #F7F7F7;
 }
 
 .red {
